# solana-dice

./: Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
frontend/: index.html  package.json  tsconfig.json
frontend/src/: App.tsx
frontend/src/idl/: solana_dice_game.json
programs/solana-dice-game/: Cargo.toml
programs/solana-dice-game/src/: lib.rs
src/: lib.rs
tests/: solana-dice-game.ts
